--- a/pom.xml
+++ b/pom.xml
@@ -36,6 +36,8 @@
 <!--			<version>2.2.1</version>-->
 <!--		</dependency>-->
 
+
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
@@ -55,6 +57,7 @@
 			<version>5.3.14</version>
 		</dependency>
 
+		<!-- Jackson related -->
 		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
 			<artifactId>jackson-core</artifactId>
@@ -66,7 +69,10 @@
 			<artifactId>jackson-databind</artifactId>
 			<version>2.10.2</version>
 		</dependency>
+
 	</dependencies>
+
+
 
 	<build>
 		<plugins>
