update app.prop keys

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,5 +4,5 @@ server.port: 8080
 security.require-ssl=true
 server.ssl.key-store:/etc/letsencrypt/live/stepheng.dev/keystore.p12
 server.ssl.key-store-password: HTTPS4Life56!
-server.ssl.keyStoreType: PKCS12
-server.ssl.keyAlias: tomcat
+server.ssl.key-store-type: PKCS12
+server.ssl.key-alias: tomcat
